# shopping-cart-checkout

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: case_a.txt  case_b.txt
scripts/: build.ps1  verify.ps1
shopping_cart/: __init__.py  cli.py  domain.py  exceptions.py  parser.py
tests/: test_checkout.py  test_cli.py  test_parser.py
