[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wisdom-garden-shopping-cart"
version = "1.0.0"
description = "A clean, object-oriented shopping-cart checkout implementation"
requires-python = ">=3.10"

[project.scripts]
shopping-cart = "shopping_cart.cli:main"

[tool.setuptools.packages.find]
include = ["shopping_cart*"]
